# rust-breakout

./: Cargo.toml  Makefile  index.html  style-70f43a971df40f91.css  wasm-5ab402ed6c13e673.js  wasm-5ab402ed6c13e673_bg.wasm  wasm-76a30623897910d1.js  wasm-76a30623897910d1_bg.wasm  wasm-96d36bf0a176055e.js  wasm-96d36bf0a176055e_bg.wasm  wasm-dbc1d10acd46f52d.js  wasm-dbc1d10acd46f52d_bg.wasm  wasm-dfe2e869960344d4.js  wasm-dfe2e869960344d4_bg.wasm
.github/workflows/: deploy.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  model.rs  ui.rs
crates/core/src/model/: ball.rs  game.rs  mod.rs
crates/native/: Cargo.toml
crates/native/src/: main.rs
crates/wasm/: Cargo.toml  Trunk.toml  index.html
crates/wasm/src/: lib.rs
src/: main.rs  ui.rs
